# Youla-Parser-old

./: App.py  Dockerfile  Parser_file.py  cfg.py  docker-compose.yaml  file.json  pyproject.toml  urls.json
Classes/: Application.py  Parser.py  Storage.py  cfg.py  main.py
Youla_Parser_Dir/: .env  .gitignore  App.py  Dockerfile  README.md  __init__.py  cfg.py  main.py  parser_core.py  pyproject.toml  requirements.txt  storage_core.py
