[tool.poetry]
name = "Youla-parser-poetry"
version = "0.0.1"
description = "lul"
authors = ["Wyzle"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.9"
selenium = "^3.141.0"
bs4 = "^0.0.1"
requests = "^2.26.0"
fake-useragent = "^0.1.11"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
