[tool.poetry]
name = "Youla_parser_w"
version = "0.01"
description = "qwe"
authors = ["Wyzle codename.wyzle@gmail.com"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.9"
bs4 = "^0.0.1"
fake-useragent = "^0.1.11"
pymongo = "^3.12.0"
requests = "^2.26.0"
selenium = "^3.141.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
